[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/main/Main.gd" type="Script" id=2]
[ext_resource path="res://Themes/Default.theme" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Advice" type="Label" parent="."]
anchor_top = 0.15625
anchor_right = 1.0
anchor_bottom = 0.189453
theme = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "ADVICE LABEL"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.5
margin_top = -108.0
margin_right = 342.5
margin_bottom = 108.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 22.0
margin_right = 685.0
margin_bottom = 194.0
alignment = 1

[node name="Banner" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 685.0
margin_bottom = 40.0
alignment = 1

[node name="EnableBanner" type="Button" parent="CenterContainer/VBoxContainer/Banner"]
margin_right = 334.0
margin_bottom = 40.0
theme = ExtResource( 3 )
disabled = true
text = "enable banner"

[node name="DisableBanner" type="Button" parent="CenterContainer/VBoxContainer/Banner"]
margin_left = 338.0
margin_right = 685.0
margin_bottom = 40.0
theme = ExtResource( 3 )
disabled = true
text = "banner disable"

[node name="Interstitial" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 685.0
margin_bottom = 84.0
theme = ExtResource( 3 )
disabled = true
text = "INTERSTITIAL"

[node name="Rewarded" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 685.0
margin_bottom = 128.0
theme = ExtResource( 3 )
disabled = true
text = "Rewarded"

[node name="UnifiedNative" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 685.0
margin_bottom = 172.0
alignment = 1

[node name="EnableUnifiedNative" type="Button" parent="CenterContainer/VBoxContainer/UnifiedNative"]
margin_right = 325.0
margin_bottom = 40.0
theme = ExtResource( 3 )
disabled = true
text = "ENABLE UNFIED"

[node name="DisableUnifiedNative" type="Button" parent="CenterContainer/VBoxContainer/UnifiedNative"]
margin_left = 329.0
margin_right = 685.0
margin_bottom = 40.0
theme = ExtResource( 3 )
disabled = true
text = "UNIFIED disable"

[node name="UnifiedNative" type="Panel" parent="."]
anchor_left = 0.281944
anchor_top = 0.61
anchor_right = 0.718
anchor_bottom = 0.84082
margin_top = 0.359985
margin_right = 0.039978
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/Banner/EnableBanner" to="." method="_on_EnableBanner_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Banner/DisableBanner" to="." method="_on_DisableBanner_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Interstitial" to="." method="_on_Interstitial_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Rewarded" to="." method="_on_Rewarded_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/UnifiedNative/EnableUnifiedNative" to="." method="_on_EnableUnifiedNative_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/UnifiedNative/DisableUnifiedNative" to="." method="_on_DisableUnifiedNative_pressed"]
